test/type-check/should-fail/not2.bril
main{

    v1: bool = const true;
    v2: int  = not v1;

}
